test/regress/cov6-post-account-notfound.test
; Test post get_account with nonexistent string argument
; Covers post.cc (account not found error)

2024/01/01 Test
    Expenses:Food    $10.00
    Assets:Cash

test reg --format '%(account("Nonexistent:Acct"))\n' -> 1
__ERROR__
While evaluating value expression:
  account("Nonexistent:Acct")
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
While calling function 'account Nonexistent:Acct':
While handling posting from "$FILE", line 5:
>     Expenses:Food    $10.00
Error: Could not find an account matching 'Nonexistent:Acct'
end test
